src/DECAF2/DECAF2Parser.java
// Generated from /home/adolfo/Universidad/Compiladores/CompiladorDECAF/src/DECAF2/DECAF2.g4 by ANTLR 4.4
package DECAF2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DECAF2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__20=1, T__19=2, T__18=3, T__17=4, T__16=5, T__15=6, T__14=7, T__13=8, 
		T__12=9, T__11=10, T__10=11, T__9=12, T__8=13, T__7=14, T__6=15, T__5=16, 
		T__4=17, T__3=18, T__2=19, T__1=20, T__0=21, CLASSX=22, STRUCTX=23, TRUEX=24, 
		FALSEX=25, VOIDX=26, IFX=27, ELSEX=28, WHILEX=29, RETURNX=30, INTX=31, 
		CHARX=32, BOOLEANX=33, IDX=34, NUMX=35, CHARY=36, SPACEX=37, COMMENTX=38, 
		COMAX=39, WS=40, AND=41, OR=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'!='", "'>='", "'['", "';'", "'{'", "'=='", "'<'", 
		"'='", "']'", "'}'", "'>'", "'<='", "'!'", "'%'", "'('", "')'", "'*'", 
		"'+'", "'-'", "'.'", "'class'", "'struct'", "'true'", "'false'", "'void'", 
		"'if'", "'else'", "'while'", "'return'", "'int'", "'char'", "'boolean'", 
		"IDX", "NUMX", "CHARY", "SPACEX", "COMMENTX", "','", "WS", "'&&'", "'||'"
	};
	public static final int
		RULE_programa = 0, RULE_declaration = 1, RULE_varDeclaration = 2, RULE_structDeclaration = 3, 
		RULE_varType = 4, RULE_methodDeclaration = 5, RULE_methodType = 6, RULE_parameter = 7, 
		RULE_parameterType = 8, RULE_block = 9, RULE_statement = 10, RULE_assign = 11, 
		RULE_ifS = 12, RULE_elseS = 13, RULE_returnS = 14, RULE_whileS = 15, RULE_location = 16, 
		RULE_structLocation = 17, RULE_simpleLocation = 18, RULE_simpleVariable = 19, 
		RULE_arrayVariable = 20, RULE_exp1 = 21, RULE_expressionNueva = 22, RULE_expression = 23, 
		RULE_andExpr = 24, RULE_eqExpr = 25, RULE_relationExpr = 26, RULE_addExpr = 27, 
		RULE_multExpr = 28, RULE_unaryExpr = 29, RULE_value = 30, RULE_methodCall = 31, 
		RULE_arg = 32, RULE_add_op = 33, RULE_mult_op = 34, RULE_rel_op = 35, 
		RULE_eq_op = 36, RULE_literal = 37, RULE_int_literal = 38, RULE_char_literal = 39, 
		RULE_bool_literal = 40;
	public static final String[] ruleNames = {
		"programa", "declaration", "varDeclaration", "structDeclaration", "varType", 
		"methodDeclaration", "methodType", "parameter", "parameterType", "block", 
		"statement", "assign", "ifS", "elseS", "returnS", "whileS", "location", 
		"structLocation", "simpleLocation", "simpleVariable", "arrayVariable", 
		"exp1", "expressionNueva", "expression", "andExpr", "eqExpr", "relationExpr", 
		"addExpr", "multExpr", "unaryExpr", "value", "methodCall", "arg", "add_op", 
		"mult_op", "rel_op", "eq_op", "literal", "int_literal", "char_literal", 
		"bool_literal"
	};

	@Override
	public String getGrammarFileName() { return "DECAF2.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DECAF2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public TerminalNode CLASSX() { return getToken(DECAF2Parser.CLASSX, 0); }
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(CLASSX);
			setState(83); match(IDX);
			setState(84); match(T__15);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCTX) | (1L << VOIDX) | (1L << INTX) | (1L << CHARX) | (1L << BOOLEANX))) != 0)) {
				{
				{
				setState(85); declaration();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(96);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); structDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); varDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95); methodDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	 
		public VarDeclarationContext() { }
		public void copyFrom(VarDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayVarDeclarationContext extends VarDeclarationContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public TerminalNode NUMX() { return getToken(DECAF2Parser.NUMX, 0); }
		public ArrayVarDeclarationContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterArrayVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitArrayVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitArrayVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleVarDeclarationContext extends VarDeclarationContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public SimpleVarDeclarationContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterSimpleVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitSimpleVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitSimpleVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclaration);
		try {
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SimpleVarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98); varType();
				setState(99); match(IDX);
				setState(100); match(T__16);
				}
				break;
			case 2:
				_localctx = new ArrayVarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102); varType();
				setState(103); match(IDX);
				setState(104); match(T__17);
				setState(105); match(NUMX);
				setState(106); match(T__11);
				setState(107); match(T__16);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructDeclarationContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public TerminalNode STRUCTX() { return getToken(DECAF2Parser.STRUCTX, 0); }
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterStructDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitStructDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitStructDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructDeclarationContext structDeclaration() throws RecognitionException {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(STRUCTX);
			setState(112); match(IDX);
			setState(113); match(T__15);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCTX) | (1L << VOIDX) | (1L << INTX) | (1L << CHARX) | (1L << BOOLEANX))) != 0)) {
				{
				{
				setState(114); varDeclaration();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarTypeContext extends ParserRuleContext {
		public TerminalNode CHARX() { return getToken(DECAF2Parser.CHARX, 0); }
		public TerminalNode INTX() { return getToken(DECAF2Parser.INTX, 0); }
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public TerminalNode BOOLEANX() { return getToken(DECAF2Parser.BOOLEANX, 0); }
		public TerminalNode STRUCTX() { return getToken(DECAF2Parser.STRUCTX, 0); }
		public TerminalNode VOIDX() { return getToken(DECAF2Parser.VOIDX, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitVarType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitVarType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varType);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122); match(INTX);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); match(CHARX);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124); match(BOOLEANX);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(125); match(STRUCTX);
				setState(126); match(IDX);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127); structDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(128); match(VOIDX);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public List<TerminalNode> COMAX() { return getTokens(DECAF2Parser.COMAX); }
		public MethodTypeContext methodType() {
			return getRuleContext(MethodTypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode COMAX(int i) {
			return getToken(DECAF2Parser.COMAX, i);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); methodType();
			setState(132); match(IDX);
			setState(133); match(T__5);
			setState(142);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTX) | (1L << CHARX) | (1L << BOOLEANX))) != 0)) {
				{
				setState(134); parameter();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMAX) {
					{
					{
					setState(135); match(COMAX);
					setState(136); parameter();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(144); match(T__4);
			setState(145); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodTypeContext extends ParserRuleContext {
		public TerminalNode CHARX() { return getToken(DECAF2Parser.CHARX, 0); }
		public TerminalNode INTX() { return getToken(DECAF2Parser.INTX, 0); }
		public TerminalNode BOOLEANX() { return getToken(DECAF2Parser.BOOLEANX, 0); }
		public TerminalNode VOIDX() { return getToken(DECAF2Parser.VOIDX, 0); }
		public MethodTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterMethodType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitMethodType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitMethodType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodTypeContext methodType() throws RecognitionException {
		MethodTypeContext _localctx = new MethodTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOIDX) | (1L << INTX) | (1L << CHARX) | (1L << BOOLEANX))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public ParameterTypeContext parameterType() {
			return getRuleContext(ParameterTypeContext.class,0);
		}
		public TerminalNode IDX() { return getToken(DECAF2Parser.IDX, 0); }
		public TerminalNode NUMX() { return getToken(DECAF2Parser.NUMX, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameter);
		try {
			setState(158);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149); parameterType();
				setState(150); match(IDX);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152); parameterType();
				setState(153); match(IDX);
				setState(154); match(T__17);
				setState(155); match(NUMX);
				setState(156); match(T__11);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterTypeContext extends ParserRuleContext {
		public TerminalNode CHARX() { return getToken(DECAF2Parser.CHARX, 0); }
		public TerminalNode INTX() { return getToken(DECAF2Parser.INTX, 0); }
		public TerminalNode BOOLEANX() { return getToken(DECAF2Parser.BOOLEANX, 0); }
		public ParameterTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterParameterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitParameterType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitParameterType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterTypeContext parameterType() throws RecognitionException {
		ParameterTypeContext _localctx = new ParameterTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTX) | (1L << CHARX) | (1L << BOOLEANX))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); match(T__15);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__15) | (1L << T__7) | (1L << T__5) | (1L << T__1) | (1L << STRUCTX) | (1L << TRUEX) | (1L << FALSEX) | (1L << VOIDX) | (1L << IFX) | (1L << WHILEX) | (1L << RETURNX) | (1L << INTX) | (1L << CHARX) | (1L << BOOLEANX) | (1L << IDX) | (1L << NUMX) | (1L << CHARY))) != 0)) {
				{
				setState(165);
				switch (_input.LA(1)) {
				case STRUCTX:
				case VOIDX:
				case INTX:
				case CHARX:
				case BOOLEANX:
					{
					setState(163); varDeclaration();
					}
					break;
				case T__16:
				case T__15:
				case T__7:
				case T__5:
				case T__1:
				case TRUEX:
				case FALSEX:
				case IFX:
				case WHILEX:
				case RETURNX:
				case IDX:
				case NUMX:
				case CHARY:
					{
					setState(164); statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(170); match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public ReturnSContext returnS() {
			return getRuleContext(ReturnSContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public WhileSContext whileS() {
			return getRuleContext(WhileSContext.class,0);
		}
		public IfSContext ifS() {
			return getRuleContext(IfSContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAF2Listener ) ((DECAF2Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAF2Visitor ) return ((DECAF2Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}
